# football-data-api

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: api.py  client.py
