[tool.poetry]
name = "football-api-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
black = "*"
fastapi = "*"
uvicorn = "*"

[tool.black]
line-length = 70

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
